--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -526,7 +526,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.9.2</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.9.3</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -2064,16 +2064,11 @@
       console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
     }
     async function getDynamicBassFill(idx, start, end) {
-      // returns average "dip" relative to target curve between start and end frequencies
-      const freqResponse = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
-      const freqArray = response2array(freqResponse, start, end);
-      const targetArray = response2array(targetResponse, start, end);
-      const arrayLength = Math.min(freqArray.length, targetArray.length);
-      const dipsArray = []; // records dips and ignores the region above target
-      for (let i = 0; i < arrayLength; i++) {
-        dipsArray.push(Math.min(freqArray[i] - targetArray[i], 0));
-      }
-      const dynamicBassFill = -1 * getAvgdB(dipsArray); // report the average dip as a positive dB value
+      // flips the SW response to ignore peaks and get the general baseline up to target
+      const avgSPL = await getAvgSPL(idx, start, end);
+      const flippedIdx = await postNext("Arithmetic", [idx, idx], {function: "1 / A", targetLevel: avgSPL});
+      const dynamicBassFill = await getAvgSPL(flippedIdx, start, end);
+      await postDelete(flippedIdx);
       return dynamicBassFill;
     }
     async function updateEQTargetSettings(mlpIdx, avgIdx, start, end, isSub) {
