--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -526,7 +526,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.9.2</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.9.3</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -2064,32 +2064,27 @@
       console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
     }
     async function getDynamicBassFill(idx, start, end) {
-      // returns average "dip" relative to target curve between start and end frequencies
-      const freqResponse = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
-      const freqArray = response2array(freqResponse, start, end);
-      const targetArray = response2array(targetResponse, start, end);
-      const arrayLength = Math.min(freqArray.length, targetArray.length);
-      const dipsArray = []; // records dips and ignores the region above target
-      for (let i = 0; i < arrayLength; i++) {
-        dipsArray.push(Math.min(freqArray[i] - targetArray[i], 0));
-      }
-      const dynamicBassFill = -1 * getAvgdB(dipsArray); // report the average dip as a positive dB value
+      // flips the SW response to ignore peaks and get the general baseline up to target
+      const avgSPL = await getAvgSPL(idx, start, end, "1%2F6");
+      const flippedIdx = await postNext("Arithmetic", [idx, idx], {function: "1 / |A|", targetLevel: avgSPL});
+      const dynamicBassFill = await getAvgSPL(flippedIdx, start, end, "1%2F6");
+      await postDelete(flippedIdx);
       return dynamicBassFill;
     }
     async function updateEQTargetSettings(mlpIdx, avgIdx, start, end, isSub) {
-      // aggressively line up response to target curve using FDW of MLP response
+      // aggressively line up response to target curve
       let tcLevelOffset = 0; // ensure target level doesn't go higher than 75dB
-      await postSafe(`http://localhost:4735/measurements/${mlpIdx}/ir-windows`, { addFDW: "true", fdwWidthCycles: "15" }, "Update processed");
       if (isSub) {
-        const subDynamicBassFill = await getDynamicBassFill(mlpIdx, Math.max(start, 20), Math.min(end, 120));
+        const subDynamicBassFill = await getDynamicBassFill(mlpIdx, Math.min(start, 30), Math.max(end, 80)); // use full bandwidth if possible
         tcLevelOffset = Math.max(tcLevelOffset, subDynamicBassFill); // dip compensation
         console.warn(`SW dynamic bass fill (dip compensation): ${subDynamicBassFill.toFixed(2)}dB`);
       }
       else {
-        const speakerSPLOffsetFDW = await getExactTrim(mlpIdx, Math.max(start, 200), Math.min(end, 2000));
+        await postSafe(`http://localhost:4735/measurements/${mlpIdx}/ir-windows`, { addFDW: "true", fdwWidthCycles: "15" }, "Update processed");
+        const speakerSPLOffsetFDW = await getExactTrim(mlpIdx, Math.max(start, 200), 2000); // emphasize SBIR affected region
         tcLevelOffset = Math.max(tcLevelOffset, speakerSPLOffsetFDW); // reverb compensation
+        await postSafe(`http://localhost:4735/measurements/${mlpIdx}/ir-windows`, { addFDW: "false" }, "Update processed");
       }
-      await postSafe(`http://localhost:4735/measurements/${mlpIdx}/ir-windows`, { addFDW: "false" }, "Update processed");
       await fetchSafe('target-level', avgIdx, 75.0 - tcLevelOffset);
       await postSafe(`${baseUrl}/${avgIdx}/target-settings`, {
         shape: isSub ? "Subwoofer" : "Full range",
@@ -3176,7 +3171,7 @@
       const avgSPL = getAvgdB(freqArray);
       return avgSPL; // average dB SPL
     }
-    async function getExactTrim(idx, start, end){
+    async function getExactTrim(idx, start, end) {
       // calculates SPL offset against target curve @75dB
       const idxSPL = await getAvgSPL(idx, start, end);
       const targetArray = response2array(targetResponse, start, end);
