--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -526,7 +526,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.9.3</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.10.0</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -734,7 +734,7 @@
     const freqIndex = [40, 60, 80, 90, 100, 110, 120, 150, 200, 250]; // common denominator
     const customLevel = [], customDistance = [], customCrossover = [];
     const mSec = [], invertSub = [], commandId = [], minDelayRangeSpan = 3;
-    const m3dBPoints = {}, cmdIdIndices = {}, cmdIdFilterIndices = {};
+    const cmdIdIndices = {}, cmdIdFilterIndices = {};
     const cmdIdMLPIndices = {}, cmdIdAVGIndices = {};
     const cmdIdMLPIndicesEQ = {}, cmdIdAVGIndicesEQ = {};
     const combinedSubIRs4AF = [];
@@ -770,6 +770,10 @@
       });
     });
     function advancedSettingsToggle() {
+      // disable toggle during optimization
+      const startButton = document.getElementById('button2');
+      if (startButton.disabled && isStarted) { return; }
+
       const content = document.getElementById("advancedContent");
       const container = document.getElementById("advancedContainer");
       const toggleText = document.getElementById("advancedToggleText");
@@ -1091,6 +1095,7 @@
     // Expand / Collapse Filters +-
     // ============================
     function toggleAllSpeakers() {
+      // disable until start button illuminates and during optimization
       const startButton = document.getElementById('button2');
       if (startButton.disabled && !isStarted) { return; }
 
@@ -1597,15 +1602,16 @@
       await disableGraph();
       await enableBlock();
       await bootUp();
-      await groundWorks();
+      await initializeTrims();
+      await timeAlignSpeakers();
+      await initializeSubwoofers();
+      await spatialAverage();
+      useAudyFiltering ? await generateTargetCurves() : await generateREWFilters();
+      // keep these steps post-EQ to take advantage of any gains from filters
       await calculateSpeakerRolloffs();
-      if (!noSub) {
-        await calculateSubBandwidth();
-        await optimizeSubDelay();
-        await finalizeXO();
-      }
-      if (useAudyFiltering) { await generateTargetCurves(); }
-      else { await generateREWFilters(); }
+      await calculateSubwooferBandwidth();
+      await optimizeSubwooferDelay();
+      await finalizeXO();
       finalizeTrims();
       finalizeDistances();
       await drawResults();
@@ -1980,9 +1986,17 @@
       console.info("Time aligned speakers.");
     }
     async function initializeSubwoofers() {
+      if (noSub) { return; }
+      console.log("Initializing subwoofer(s)...");
+      if (bassMode === "Directional") {console.info(`'Directional bass' mode with '${swChannelCount}' subwoofers detected.`);}
+      if (bassMode != "Directional" && swChannelCount > 1) {console.info(`'Standard bass' mode with '${swChannelCount}' subwoofers detected.`);}
+      if (bassMode != "Directional" && swChannelCount === 1) {console.info(`'Standard bass' mode with '${swChannelCount}' subwoofer detected.`);}
       if (bassMode === "Directional") {
         await directional2standard();
       }
+      const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
+      console.info(`Available bass system volume adjustment range → { ${subLoTrim}dB : ${subHiTrim}dB }`);
+      console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
       const SWIndices = cmdIdIndices[commandId[nChannels]];
       if (SWIndices.length > 1) {
         const SWMaxDelta = await calculateMaxDeltaOfResponses(SWIndices, 30, 80);
@@ -2049,19 +2063,6 @@
         mlpIdx += 2;
         avgIdx += 2;
       }
-    }
-    async function groundWorks() {
-      if (bassMode === "Directional") {console.info(`'Directional bass' mode with '${swChannelCount}' subwoofers detected.`);}
-      if (bassMode != "Directional" && swChannelCount > 1) {console.info(`'Standard bass' mode with '${swChannelCount}' subwoofers detected.`);}
-      if (bassMode != "Directional" && swChannelCount === 1) {console.info(`'Standard bass' mode with '${swChannelCount}' subwoofer detected.`);}
-      await initializeTrims();
-      await timeAlignSpeakers();
-      if (!noSub) { await initializeSubwoofers(); }
-      await spatialAverage();
-      if (noSub) { return; }
-      const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
-      console.info(`Available bass system volume adjustment range → { ${subLoTrim}dB : ${subHiTrim}dB }`);
-      console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
     }
     async function getDynamicBassFill(idx, start, end) {
       // flips the SW response to ignore peaks and get the general baseline up to target
@@ -2362,16 +2363,19 @@
         const isSub = commandId[i].startsWith("SW");
         const mlpIdx = cmdIdMLPIndices[commandId[i]];
         const avgIdx = cmdIdAVGIndices[commandId[i]];
+        // find bandwidths and EQ within the frequency range the speaker/subwoofer can play
+        const LFRolloff = Math.round(await getAbsLow3dBPoint(avgIdx, isSub, isSub ? 10 : 20));
+        const HFRolloff = Math.round(isSub ? await getAbsHigh6dBPoint(avgIdx) : await getSpeakerHFRolloff(avgIdx));
         // line up response to target aggressively and set target type
-        await updateEQTargetSettings(mlpIdx, avgIdx, m3dBPoints[i][0], m3dBPoints[i][1], isSub);
+        await updateEQTargetSettings(mlpIdx, avgIdx, LFRolloff, HFRolloff, isSub);
         // plug in boost parameters
         if (isSub) {
-          await updateEQFilterSettings(m3dBPoints[i][0], m3dBPoints[i][1],
+          await updateEQFilterSettings(LFRolloff, HFRolloff,
             subwooferIndividualMaxBoost, subwooferOverallMaxBoost,
             subwooferLowShelfMin, subwooferLowShelfMax, 0, 0); // no HS
         }
         else {
-          await updateEQFilterSettings(m3dBPoints[i][0], m3dBPoints[i][1],
+          await updateEQFilterSettings(LFRolloff, HFRolloff,
             speakerIndividualMaxBoost, speakerOverallMaxBoost,
             0, 0, speakerHighShelfMin, speakerHighShelfMax); // no LS
         }
@@ -2450,6 +2454,7 @@
         console.info(`${commandId[i].padStart(3, ".")} - generating target curve...`);
         const isSub = commandId[i].startsWith("SW");
         const mlpIdx = cmdIdMLPIndices[commandId[i]];
+        const avgIdx = cmdIdAVGIndices[commandId[i]];
         // add in all user customizations & calculate any AL offset
         const customFilterIdx = await getUserCustomizations(mlpIdx, commandId[i]); // add any user desired customizations
         const TCOffset = await getALOffset(targetCurveIdx, isSub); // used to auto-level target curve so app doesn't
@@ -2463,15 +2468,19 @@
         await postDelete(customFilterIdx); // custom filter idx is now target curve with custom filters
         await postNext('Add SPL offset', customFilterIdx, { offset: -(TCOffset + ALOffset) });
         await fetch_mREW(customFilterIdx, 'PUT', { title: `${commandId[i]}-targetCurve` });
-        cmdIdFilterIndices[commandId[i]] = customFilterIdx - 1; // baseline target curve will be deleted and everything will shift by -1
+        // auto-level offset to compensate for user customizations
         const trimOffset = Math.round(ALOffset * 2) / 2;
         let logUpdate = `${commandId[i].padStart(3, ".")} - target curve created`;
         if (trimOffset != 0) {
           const customLevelOriginal = customLevel[i];
           customLevel[i] += trimOffset;
-          logUpdate += ` | ${commandId[i].padStart(3, ".")} auto-level offset: ${customLevelOriginal}dB → ${customLevel[i]}dB (${trimOffset}dB)`;
+          logUpdate += ` | auto-level offset: ${customLevelOriginal}dB → ${customLevel[i]}dB (${trimOffset}dB)`;
         }
         console.infoUpdate(logUpdate);
+        // store for later
+        cmdIdFilterIndices[commandId[i]] = customFilterIdx - 1; // target curve with user customizations; subtract 1 because target curve will be removed
+        cmdIdMLPIndicesEQ[commandId[i]] = mlpIdx; // can't predict how Audyssey will EQ, so simply copy
+        cmdIdAVGIndicesEQ[commandId[i]] = avgIdx; // can't predict how Audyssey will EQ, so simply copy
       }
       await postDelete(targetCurveIdx);
     }
@@ -2596,14 +2605,14 @@
     async function calculateSpeakerRolloffs() {
       console.log("Calculating speaker roll-offs...");
       for (let i = 1; i <= nSpeakers; i++) {
-        const spIdx = cmdIdAVGIndices[commandId[i]];
+        const spIdx = cmdIdAVGIndicesEQ[commandId[i]];
         // check if single channel or speaker pair
         const singleChannel = isSingleChannel(commandId[i]);
         const cmdIds = (singleChannel ? commandId[i] : `${commandId[i]} & ${commandId[i + 1]}`).padStart(9, ".");
         // rolloff determination logic
         let idx = spIdx;
         if (!singleChannel) {
-          const spIdxR = cmdIdAVGIndices[commandId[i + 1]]
+          const spIdxR = cmdIdAVGIndicesEQ[commandId[i + 1]]
           idx = await postNext('Magn plus phase average', [spIdx, spIdxR]); // do not use VA. it unfairly benefits single channel speakers
         }
         const rolloff = await getAbsLow3dBPoint(idx, false, 20);
@@ -2613,38 +2622,29 @@
           initialXO = "L";
         }
         customCrossover[i] = initialXO;
-        // used for EQ limits
-        const rolloffLF = await getAbsLow3dBPoint(spIdx, false, 20); // speaker specific, not pair specific
-        const rolloffHF = await getSpeakerHFRolloff(spIdx); // speaker specific, not pair specific
-        m3dBPoints[i] = [Math.round(rolloffLF), Math.round(rolloffHF)];
         if (!singleChannel) {
           // assign initialXO to the right channel of the speaker pair
           customCrossover[i + 1] = initialXO;
           await postDelete(idx); // cleanup
-          // used for EQ limits
-          const spIdxR = cmdIdAVGIndices[commandId[i + 1]]
-          const rolloffLFR = await getAbsLow3dBPoint(spIdxR, false, 20); // speaker specific, not pair specific
-          const rolloffHFR = await getSpeakerHFRolloff(spIdxR); // speaker specific, not pair specific
-          m3dBPoints[i + 1] = [Math.round(rolloffLFR), Math.round(rolloffHFR)];
           i++;
         }
         const logMessage = initialXO === "L" ? "Large/Full Range" : `Initial XO: ${initialXO}hz`;
         console.info(`${cmdIds} - roll-off: ${rolloff.toFixed(2)}Hz → ${logMessage}`);
       }
     }
-    async function calculateSubBandwidth() {
+    async function calculateSubwooferBandwidth() {
+      if (noSub) { return; }
       console.log("Calculating subwoofer bandwidth...")
       // find low freq point based on max low shelf (REW) or -3dB (Audy) & set minXO
-      const subLowFreq = await getAbsLow3dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
+      const subLowFreq = await getAbsLow3dBPoint(cmdIdAVGIndicesEQ[commandId[nChannels]]);
       minXO = findNearestXO(2 * subLowFreq); // give subwoofer an octave to ramp up
       // find high freq -6dB point (since LPF is 24dB/oct) and set maxXO
-      const subHighFreq = await getAbsHigh6dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
+      const subHighFreq = await getAbsHigh6dBPoint(cmdIdAVGIndicesEQ[commandId[nChannels]]);
       maxXO = findNearestXO(subHighFreq); // set max XO closest to subwoofer HF roll-off
       if (minXO >= maxXO) {
         minXO = maxXO;
         console.warn(`Subwoofer has very little bandwidth and can only support ${minXO}hz crossover!`);
       }
-      m3dBPoints[nChannels] = [Math.round(subLowFreq), Math.round(subHighFreq)];
       Object.freeze(minXO);
       Object.freeze(maxXO);
       console.info(`${commandId[nChannels].padStart(3, ".")} bandwidth: ${subLowFreq.toFixed(2)}hz - ${subHighFreq.toFixed(2)}hz → Usable XO range: ${minXO}hz - ${maxXO}hz`);
@@ -2665,22 +2665,23 @@
         }
       }
     }
-    async function optimizeSubDelay() {
+    async function optimizeSubwooferDelay() {
+      if (noSub) { return; }
       console.log("Optimizing subwoofer delay for ALL speakers...");
       const mlpSPIndices = [];
       for (let i = 1; i <= nSpeakers; i++) {
-        mlpSPIndices.push(cmdIdMLPIndices[commandId[i]]);
+        mlpSPIndices.push(cmdIdMLPIndicesEQ[commandId[i]]);
       }
       // prepare "average" speaker's excess phase response
       const avgSpeakerIdx = await postNext('Magn plus phase average', Array.from(mlpSPIndices));
       const avgSpeakerEPIdx = await genExcessPhaseResponse(avgSpeakerIdx);
       // prepare subwoofer's excess phase response
-      const subwooferEPIdx = await genExcessPhaseResponse(cmdIdMLPIndices[commandId[nChannels]]);
+      const subwooferEPIdx = await genExcessPhaseResponse(cmdIdMLPIndicesEQ[commandId[nChannels]]);
       // use min <-> max XO plus an octave on either side to set evaluation range
       const startFreq = minXO / 2;
       const endFreq = maxXO * 2;
       // set delay limits based on IR start delta to prioritize time alignment
-      const subwooferIRStart = await getIRStart(cmdIdMLPIndices[commandId[nChannels]]);
+      const subwooferIRStart = await getIRStart(cmdIdMLPIndicesEQ[commandId[nChannels]]);
       const IRStartDelta = -1000 * subwooferIRStart; // speakers are at t=0 by now
       let loDelayLimit = IRStartDelta - minDelayRangeSpan * 2; // compensate for higher delays from LPF slope
       let hiDelayLimit = IRStartDelta + minDelayRangeSpan;
@@ -2698,11 +2699,11 @@
       // apply optimal delay
       const subMoves = requiredDelay / 1000;
       if (isInverted) {
-        await postSafe(`${baseUrl}/${cmdIdMLPIndices[commandId[nChannels]]}/command`,{command: "Invert"}, "Invert completed");
-        await postSafe(`${baseUrl}/${cmdIdAVGIndices[commandId[nChannels]]}/command`,{command: "Invert"}, "Invert completed");
+        await postSafe(`${baseUrl}/${cmdIdMLPIndicesEQ[commandId[nChannels]]}/command`,{command: "Invert"}, "Invert completed");
+        await postSafe(`${baseUrl}/${cmdIdAVGIndicesEQ[commandId[nChannels]]}/command`,{command: "Invert"}, "Invert completed");
       }
-      await postNext('Offset t=0', cmdIdMLPIndices[commandId[nChannels]], {offset: -subMoves, unit: "seconds"});
-      await postNext('Offset t=0', cmdIdAVGIndices[commandId[nChannels]], {offset: -subMoves, unit: "seconds"});
+      await postNext('Offset t=0', cmdIdMLPIndicesEQ[commandId[nChannels]], {offset: -subMoves, unit: "seconds"});
+      await postNext('Offset t=0', cmdIdAVGIndicesEQ[commandId[nChannels]], {offset: -subMoves, unit: "seconds"});
       if (bassMode === "Directional") {
         for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
           mSec[i] += subMoves;
@@ -2790,9 +2791,10 @@
       }
     }
     async function finalizeXO() {
+      if (noSub) { return; }
       console.log("Finalizing crossover frequencies...");
       console.info(`Usable XO range: ${minXO}hz - ${maxXO}hz (based on subwoofer bandwidth)`);
-      const mlpSWIdx = cmdIdMLPIndices[commandId[nChannels]];
+      const mlpSWIdx = cmdIdMLPIndicesEQ[commandId[nChannels]];
       for (let i = 1; i <= nSpeakers; i++) {
         // check if single channel or speaker pair
         const singleChannel = isSingleChannel(commandId[i]);
@@ -2802,9 +2804,9 @@
         const startFreq = initialXO / 2;
         const endFreq = initialXO * 2;
         // prepare speaker pair if it's not a single channel
-        let mlpSPIdx = cmdIdMLPIndices[commandId[i]];
+        let mlpSPIdx = cmdIdMLPIndicesEQ[commandId[i]];
         if (!singleChannel) {
-          const mlpSPIdxR = cmdIdMLPIndices[commandId[i + 1]];
+          const mlpSPIdxR = cmdIdMLPIndicesEQ[commandId[i + 1]];
           mlpSPIdx = await postNext('Magn plus phase average', [mlpSPIdx, mlpSPIdxR]); // do not use VA. it unfairly benefits single channel speakers
         }
         let bestXO = initialXO, maxAvgSPL = -Infinity; // initialize
@@ -3015,7 +3017,7 @@
       }
       // sort subwoofers using IR start times
       const sortedSwCmdIds = Object.entries(swCmdIdsWithIRStart).sort((a, b) => a[1] - b[1]).map(row => row[0]);
-      console.info(`Alignment order based on proximity: ${sortedSwCmdIds}`);
+      console.info(`Alignment order based on proximity: ${sortedSwCmdIds.join(', ')}`);
       // index 0 is closest subwoofer and it is treated as the reference
       let aggCmdIds = sortedSwCmdIds[0]; // holds the aggregate commandIds as subwoofers are combined
       let aggSubEPIdx = swCmdIdsWithEPResponseIndices[sortedSwCmdIds[0]]; // holds aggregate EP response
@@ -3127,7 +3129,7 @@
         }
         cmdIdIndices[cmdId].push(i);
       }
-      console.info("Directional to standard bass conversion complete.");
+      console.log("Directional to standard bass conversion complete.");
     }
     function response2array(response, start, end, phase=false) {
       let startFreq = response.startFreq;
