--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2364,8 +2364,10 @@
         const mlpIdx = cmdIdMLPIndices[commandId[i]];
         const avgIdx = cmdIdAVGIndices[commandId[i]];
         // find bandwidths and EQ within the frequency range the speaker/subwoofer can play
-        const LFRolloff = Math.round(await getAbsLow3dBPoint(avgIdx, isSub, isSub ? 10 : 20));
-        const HFRolloff = Math.round(isSub ? await getAbsHigh6dBPoint(avgIdx) : await getSpeakerHFRolloff(avgIdx));
+        // manipulate dropSPL based on low shelf max for subs and high shelf max for speakers so EQ works as expected
+        const LFRolloff = Math.round(await getAbsLow3dBPoint(avgIdx, isSub, isSub ? -subwooferLowShelfMax : -3));
+        const HFRolloff = Math.round(isSub ? await getAbsHigh6dBPoint(avgIdx)
+                                           : await getSpeakerHFRolloff(avgIdx, -speakerHighShelfMax));
         // line up response to target aggressively and set target type
         await updateEQTargetSettings(mlpIdx, avgIdx, LFRolloff, HFRolloff, isSub);
         // plug in boost parameters
@@ -2550,36 +2552,37 @@
       }
       return xo;
     }
-    async function getAbsLow3dBPoint(idx, isSub=true, start=10, end=320) {
+    async function getAbsLow3dBPoint(idx, isSub=true, dropSPL=-3) {
       // finds low -3dB point from mean SPL
+      const start = isSub ? 10 : 20, end = 320;
       const idxSPL = isSub ? await getAvgSPL(idx, 30, 80) : await getAvgSPL(idx, 500, 2000);
       const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
       const rpArray = response2array(response, start, end);
       const octave = Math.pow(2, 1/96);
       let rolloff = start;
-      let dropSPL = -3;
-      if (!useAudyFiltering && isSub) { dropSPL = Math.min(-3, -subwooferLowShelfMax); } // for REW filtering, account low freq ext gain from LS
       for (let i = 0; i < rpArray.length; i++) {
         if ((rpArray[i] - idxSPL) >= dropSPL) { break; }
         rolloff *= octave;
       }
       return Math.min(rolloff, end);
     }
-    async function getAbsHigh6dBPoint(idx, isSub=true, start=10, end=320) {
+    async function getAbsHigh6dBPoint(idx, isSub=true, dropSPL=-6) {
       // finds high -6dB point from mean SPL
+      const start = isSub ? 10 : 20, end = 320;
       const idxSPL = isSub ? await getAvgSPL(idx, 30, 80) : await getAvgSPL(idx, 500, 2000);
       const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
       const rpArray = response2array(response, start, end);
       const octave = Math.pow(2, 1/96);
       let rolloff = end;
       for (let i = rpArray.length - 1; i >= 0; i--) {
-        if ((rpArray[i] - idxSPL) >= -6) { break; }
+        if ((rpArray[i] - idxSPL) >= dropSPL) { break; }
         rolloff /= octave;
       }
       return Math.max(rolloff, start);
     }
-    async function getSpeakerHFRolloff(idx, start=10000, end=20000) {
+    async function getSpeakerHFRolloff(idx, dropSPL=-3) {
       // goal of this function is to find the roll-off past 10k before any HF peaks that can mess with the high shelf
+      const start = 10000, end = 20000
       const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
       const rpArray = response2array(response, start, end);
       const tcArray = response2array(targetResponse, start, end);
@@ -2588,8 +2591,6 @@
       let checkFreq = start;
       let rolloff = checkFreq;
       let lowestSPL = rpArray[0];
-      let dropSPL = -3;
-      if (!useAudyFiltering) { dropSPL = Math.min(-3, -speakerHighShelfMax); }
       for (let i = 0; i < arrLength; i++) {
         if (rpArray[i] < lowestSPL) {
           lowestSPL = rpArray[i];
@@ -2615,7 +2616,7 @@
           const spIdxR = cmdIdAVGIndicesEQ[commandId[i + 1]]
           idx = await postNext('Magn plus phase average', [spIdx, spIdxR]); // do not use VA. it unfairly benefits single channel speakers
         }
-        const rolloff = await getAbsLow3dBPoint(idx, false, 20);
+        const rolloff = await getAbsLow3dBPoint(idx, false);
         let initialXO = findNearestXO(rolloff + 15); // look for initial XO that's ~15hz above roll-off
         // edge case for no subwoofer
         if (noSub && cmdIds.endsWith("FL & FR")) {
@@ -2699,9 +2700,13 @@
       // apply optimal delay
       const subMoves = requiredDelay / 1000;
       if (isInverted) {
+        await postSafe(`${baseUrl}/${cmdIdMLPIndices[commandId[nChannels]]}/command`,{command: "Invert"}, "Invert completed");
+        await postSafe(`${baseUrl}/${cmdIdAVGIndices[commandId[nChannels]]}/command`,{command: "Invert"}, "Invert completed");
         await postSafe(`${baseUrl}/${cmdIdMLPIndicesEQ[commandId[nChannels]]}/command`,{command: "Invert"}, "Invert completed");
         await postSafe(`${baseUrl}/${cmdIdAVGIndicesEQ[commandId[nChannels]]}/command`,{command: "Invert"}, "Invert completed");
       }
+      await postNext('Offset t=0', cmdIdMLPIndices[commandId[nChannels]], {offset: -subMoves, unit: "seconds"});
+      await postNext('Offset t=0', cmdIdAVGIndices[commandId[nChannels]], {offset: -subMoves, unit: "seconds"});
       await postNext('Offset t=0', cmdIdMLPIndicesEQ[commandId[nChannels]], {offset: -subMoves, unit: "seconds"});
       await postNext('Offset t=0', cmdIdAVGIndicesEQ[commandId[nChannels]], {offset: -subMoves, unit: "seconds"});
       if (bassMode === "Directional") {
