--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2814,7 +2814,7 @@
           const mlpSPIdxR = cmdIdMLPIndicesEQ[commandId[i + 1]];
           mlpSPIdx = await postNext('Magn plus phase average', [mlpSPIdx, mlpSPIdxR]); // do not use VA. it unfairly benefits single channel speakers
         }
-        let bestXO = initialXO, maxAvgSPL = -Infinity; // initialize
+        let bestXO = initialXO, minAvgDip = Infinity; // initialize
         console.info("Starting...");
         for (let j = 0; j < freqIndex.length; j++) {
           const checkXO = freqIndex[j];
@@ -2823,12 +2823,12 @@
           // final XO determination logic
           console.infoUpdate(`${cmdIds} - Initial XO: ${initialXO}hz → Checking XO: ${checkXO}hz`);
           const mlpXOResultIdx = await addSub2Speaker(mlpSPIdx, mlpSWIdx, checkXO); // response using checkXO
-          const checkXOAvgSPL = await getAvgSPL(mlpXOResultIdx, startFreq, endFreq);
-          // pick XO with highest output
-          if (maxAvgSPL < checkXOAvgSPL) {
+          // pick XO with least dips
+          const checkXOAvgDip = await getAvgDip(mlpXOResultIdx, startFreq, endFreq);
+          if (minAvgDip > checkXOAvgDip) {
             // progressively require higher improvements for higher XO
-            // e.g. 0.4dB improvement needed to go up from 40hz but 1.2dB improvement needed to go up from 120hz
-            maxAvgSPL = checkXOAvgSPL + checkXO / 100;
+            // e.g. 0.04dB improvement needed to go up from 40hz but 0.12dB improvement needed to go up from 120hz
+            minAvgDip = checkXOAvgDip - checkXO / 1000;
             bestXO = checkXO;
           }
           await postDelete(mlpXOResultIdx); // cleanup checkXO response
@@ -3177,6 +3177,19 @@
       const freqArray = response2array(freqResponse, start, end);
       const avgSPL = getAvgdB(freqArray);
       return avgSPL; // average dB SPL
+    }
+    async function getAvgDip(idx, start, end) {
+      // returns average "dip" relative to target curve between start and end frequencies
+      const freqResponse = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
+      const freqArray = response2array(freqResponse, start, end);
+      const targetArray = response2array(targetResponse, start, end);
+      const arrayLength = Math.min(freqArray.length, targetArray.length);
+      const dipsArray = []; // records dips and ignores the region above target
+      for (let i = 0; i < arrayLength; i++) {
+        dipsArray.push(Math.min(freqArray[i] - targetArray[i], 0));
+      }
+      const avgDip = -1 * getAvgdB(dipsArray); // report the average dip as a positive dB value
+      return avgDip;
     }
     async function getExactTrim(idx, start, end) {
       // calculates SPL offset against target curve @75dB
